--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.3",
     "ioredis": "^5.3.2",
     "random-word-slugs": "^0.1.7",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "aws-sdk": "^2.1589.0",
+    "body-parser": "^1.20.2"
   }
 }
